--- a/all.yaml
+++ b/all.yaml
@@ -1,61 +1,4 @@
 proxies:
-    - alpn:
-        - h3
-      auth_str: dongtaiwang.com
-      down: "100"
-      name: "\U0001F1EB\U0001F1F7法国1 | ⬇️ 5.7MB/s"
-      obfs: ""
-      port: "15010"
-      protocol: ""
-      server: 195.154.200.40
-      skip-cert-verify: true
-      sni: apple.com
-      type: hysteria
-      up: "100"
-    - name: "\U0001F1E7\U0001F1F7巴西1 | ⬇️ 5.1MB/s"
-      network: ws
-      port: "80"
-      server: 45.131.5.99
-      type: vless
-      udp: true
-      uuid: c5293efa-28f8-4a0f-8f34-541078970cee
-      ws-opts:
-        headers:
-            Host: gozargah.validbv7996.ir
-            User-Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.87 Safari/537.36
-        path: /
-      xudp: true
-    - client-fingerprint: chrome
-      flow: xtls-rprx-vision
-      http-opts:
-        headers: {}
-        path:
-            - /
-      name: "\U0001F1EF\U0001F1F5日本1 | ⬇️ 5.3MB/s"
-      network: tcp
-      port: "48121"
-      reality-opts:
-        public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY
-        short-id: ""
-      server: beiyong.dynuddns.net
-      servername: www.nvidia.com
-      tls: true
-      type: vless
-      udp: true
-      uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45
-      xudp: true
-    - client-fingerprint: chrome
-      flow: xtls-rprx-vision
-      name: "\U0001F1EF\U0001F1F5日本2 | ⬇️ 6.2MB/s"
-      network: tcp
-      port: 10635
-      reality-opts:
-        public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY
-      server: shenzhou05.mysynology.net
-      servername: www.nvidia.com
-      tls: true
-      type: vless
-      uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45
     - client-fingerprint: chrome
       flow: xtls-rprx-vision
       name: "\U0001F300其他1-CN | ⬇️ 5.4MB/s"
@@ -71,281 +14,24 @@ proxies:
       udp: true
       uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45
       xudp: true
-    - client-fingerprint: chrome
-      flow: xtls-rprx-vision
-      name: "\U0001F1F8\U0001F1EC新加坡1 | ⬇️ 8.0MB/s"
-      network: tcp
-      port: "29877"
-      reality-opts:
-        public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY
-        short-id: ""
-      server: beiyong.dynuddns.net
-      servername: www.nvidia.com
-      tls: true
-      type: vless
-      udp: true
-      uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45
-      xudp: true
-    - cipher: chacha20-ietf-poly1305
-      name: "\U0001F300其他2-SE | ⬇️ 5.3MB/s"
-      password: zCbrIk12Qlg9YcERdnzjoh
-      port: "39649"
-      server: sto2.a.edgeservers.org
-      type: ss
-      udp: true
-    - client-fingerprint: chrome
-      flow: xtls-rprx-vision
-      http-opts:
-        headers: {}
-        path:
-            - /
-      name: "\U0001F1F9\U0001F1FC台湾1 | ⬇️ 6.0MB/s"
-      network: tcp
-      port: "37809"
-      reality-opts:
-        public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY
-        short-id: ""
-      server: shenzhou05.mysynology.net
-      servername: www.yahoo.com
-      tls: true
-      type: vless
-      udp: true
-      uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45
-      xudp: true
-    - client-fingerprint: chrome
-      flow: xtls-rprx-vision
-      name: "\U0001F1ED\U0001F1F0香港1 | ⬇️ 5.5MB/s"
-      network: tcp
-      port: 45883
-      reality-opts:
-        public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY
-      server: gysz0000.dynu.net
-      servername: www.nvidia.com
-      tls: true
-      type: vless
-      uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45
-    - cipher: aes-256-gcm
-      name: "\U0001F1ED\U0001F1F0香港2 | ⬇️ 5.9MB/s"
-      password: cf36df84-50ad-47fd-8cd3-ec443058d866
-      port: 65330
-      server: relay01.oceancloud.asia
-      type: ss
-    - cipher: aes-256-gcm
-      name: "\U0001F1F8\U0001F1EC新加坡2 | ⬇️ 5.5MB/s"
-      password: 9acfc574-acc3-4c2b-ab3b-491d43a6eb83
-      port: "21115"
-      server: okanc.node-is.green
-      type: ss
-      udp: true
-    - client-fingerprint: chrome
-      name: "\U0001F1E9\U0001F1EA德国1 | ⬇️ 5.9MB/s"
-      network: tcp
-      port: "1000"
-      reality-opts:
-        public-key: vj5pvcr-2G1kK7hKp937WrwAPtVg4p94HpqeCAuauD4
-        short-id: ""
-      server: free.serverfreedom.com
-      servername: refersion.com
-      tls: true
-      type: vless
-      udp: true
-      uuid: 663edcc5-3c01-443f-b9e3-fb833d5c7b47
-      xudp: true
-    - name: "\U0001F1EB\U0001F1F7法国2 | ⬇️ 5.9MB/s"
-      network: ws
-      port: "8080"
-      server: 104.26.15.85
-      servername: 75.39vAoYKMw2.ZuLAIR.ORG.
-      type: vless
-      udp: true
-      uuid: f8351661-f06b-4d9a-a9e6-021e61b4cc3c
-      ws-opts:
-        headers:
-            Host: 75.39vAoYKMw2.ZuLAIR.ORG.
-            User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.133 Safari/537.36
-        path: /?ed=2048
-      xudp: true
-    - client-fingerprint: chrome
-      flow: xtls-rprx-vision
-      name: "\U0001F1ED\U0001F1F0香港3 | ⬇️ 5.2MB/s"
-      network: tcp
-      port: "24318"
-      reality-opts:
-        public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY
-        short-id: ""
-      server: test123.zlqhdns.top
-      servername: www.nvidia.com
-      tls: true
-      type: vless
-      udp: true
-      uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45
-      xudp: true
-    - client-fingerprint: chrome
-      flow: xtls-rprx-vision
-      name: "\U0001F300其他3-CN | ⬇️ 5.0MB/s"
-      network: tcp
-      port: "28680"
-      reality-opts:
-        public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY
-        short-id: ""
-      server: shenzhou05.mysynology.net
-      servername: www.nvidia.com
-      tls: true
-      type: vless
-      udp: true
-      uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45
-      xudp: true
-    - client-fingerprint: chrome
-      http-opts:
-        headers: {}
-        path:
-            - /
-      name: "\U0001F1E9\U0001F1EA德国2 | ⬇️ 5.5MB/s"
-      network: tcp
-      port: "1000"
-      reality-opts:
-        public-key: vj5pvcr-2G1kK7hKp937WrwAPtVg4p94HpqeCAuauD4
-        short-id: ""
-      server: 188.245.240.141
-      servername: refersion.com
-      tls: true
-      type: vless
-      udp: true
-      uuid: 663edcc5-3c01-443f-b9e3-fb833d5c7b47
-      xudp: true
-    - alpn:
-        - h3
-      auth_str: dongtaiwang.com
-      down: "100"
-      name: "\U0001F1FA\U0001F1F8美国1 | ⬇️ 5.7MB/s"
-      obfs: ""
-      port: "40528"
-      protocol: ""
-      server: 208.87.243.187
-      skip-cert-verify: true
-      sni: apple.com
-      type: hysteria
-      up: "100"
-    - name: "\U0001F1EF\U0001F1F5日本3 | ⬇️ 5.6MB/s"
+    - name: "\U0001F1F8\U0001F1EC新加坡1 | ⬇️ 5.0MB/s"
       network: ws
       port: "80"
-      server: 45.131.4.210
+      server: 170.114.45.6
       type: vless
       udp: true
-      uuid: c5293efa-28f8-4a0f-8f34-541078970cee
+      uuid: d9074e14-c4e4-4e58-8fff-3727e83af868
       ws-opts:
         headers:
-            Host: gozargah.validbv7996.ir
-            User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.80 Safari/537.36
+            Host: free.pranithsandaruwan.shop
+            User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.80 Safari/537.36
         path: /
       xudp: true
-    - name: "\U0001F1FA\U0001F1F8美国2 | ⬇️ 5.7MB/s"
-      network: ws
-      port: "80"
-      server: 45.131.5.26
-      type: vless
-      udp: true
-      uuid: c5293efa-28f8-4a0f-8f34-541078970cee
-      ws-opts:
-        headers:
-            Host: gozargah.validbv7996.ir
-            User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36
-        path: "/Telegram\U0001F1E8\U0001F1F3@WangCai2"
-      xudp: true
-    - client-fingerprint: chrome
-      flow: xtls-rprx-vision
-      name: "\U0001F1F8\U0001F1EC新加坡3 | ⬇️ 5.2MB/s"
+    - name: "\U0001F300其他2-MY | ⬇️ 5.6MB/s"
       network: tcp
-      port: "44003"
-      reality-opts:
-        public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY
-        short-id: ""
-      server: csuzhou01.1cooldns.com
-      servername: www.nvidia.com
-      tls: true
+      port: "58491"
+      server: 43.216.210.242
       type: vless
       udp: true
-      uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45
+      uuid: 63ea63b4-abd1-4659-dbcc-8cdc30710578
       xudp: true
-    - name: "\U0001F1E9\U0001F1EA德国3 | ⬇️ 5.2MB/s"
-      network: ws
-      port: "80"
-      server: 45.131.5.159
-      servername: gozargah.validbv7996.ir
-      type: vless
-      udp: true
-      uuid: c5293efa-28f8-4a0f-8f34-541078970cee
-      ws-opts:
-        headers:
-            Host: gozargah.validbv7996.ir
-            User-Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.186 Safari/537.36
-        path: "/Telegram\U0001F1E8\U0001F1F3@WangCai2/?ed=2560"
-      xudp: true
-    - client-fingerprint: chrome
-      flow: xtls-rprx-vision
-      name: "\U0001F1EF\U0001F1F5日本4 | ⬇️ 5.6MB/s"
-      network: tcp
-      port: "35659"
-      reality-opts:
-        public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY
-        short-id: ""
-      server: shenzhou02.mysynology.net
-      servername: gateway.icloud.com
-      tls: true
-      type: vless
-      udp: true
-      uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45
-      xudp: true
-    - alpn:
-        - h3
-      auth_str: dongtaiwang.com
-      down: 1000 Mbps
-      name: "\U0001F1FA\U0001F1F8美国3 | ⬇️ 5.2MB/s"
-      port: 11512
-      server: 108.181.24.77
-      skip-cert-verify: true
-      sni: apple.com
-      type: hysteria
-      udp: true
-      up: 1000 Mbps
-    - name: "\U0001F1FA\U0001F1F8美国4 | ⬇️ 5.3MB/s"
-      network: ws
-      port: "80"
-      server: 45.131.5.101
-      servername: gozargah.validbv7996.ir
-      type: vless
-      udp: true
-      uuid: c5293efa-28f8-4a0f-8f34-541078970cee
-      ws-opts:
-        headers:
-            Host: gozargah.validbv7996.ir
-            User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US) AppleWebKit/534.7 (KHTML, like Gecko) Chrome/7.0.517.44 Safari/534.7
-        path: "/Telegram\U0001F1E8\U0001F1F3@WangCai2"
-      xudp: true
-    - name: "\U0001F1FA\U0001F1F8美国5 | ⬇️ 6.6MB/s"
-      network: ws
-      port: "80"
-      server: 45.131.4.188
-      type: vless
-      udp: true
-      uuid: c5293efa-28f8-4a0f-8f34-541078970cee
-      ws-opts:
-        headers:
-            Host: gozargah.validbv7996.ir
-            User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/65.0.3325.162 Safari/537.36
-        path: /
-      xudp: true
-    - name: "\U0001F1F9\U0001F1FC台湾2 | ⬇️ 6.6MB/s"
-      network: ws
-      port: 8443
-      server: 104.129.166.131
-      servername: edccw.ambercc.filegear-sg.me
-      skip-cert-verify: true
-      tls: true
-      type: vless
-      udp: true
-      uuid: ee6774c0-9b19-4ff1-8b30-2da4b71977e2
-      ws-opts:
-        headers:
-            host: edccw.ambercc.filegear-sg.me
-        path: /?ed=2560
